# APlay

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README_zh.md
app/: CMakeLists.txt
app/android/src/main/cpp/: CMakeLists.txt  native_entry.cpp
app/linux/: CMakeLists.txt  main.cpp  runtime.cpp
app/linux/include/aplay/linux/: runtime.hpp
docs/: AGENTS.md  (+6 more)
harness/: CMakeLists.txt  crypto_vectors.cpp  protocol_replay.cpp  rtp_replay.cpp  smoke_main.cpp  verify_linux.sh  verify_mdns.sh
harness/fixtures/: rtp_audio.csv  rtsp_options.txt
harness/mdns/: CMakeLists.txt  mdns_announce.cpp  mdns_replay.cpp
sdk/src/main/cpp/: CMakeLists.txt  cpp_sdk.cpp
sdk/src/main/cpp/core/: CMakeLists.txt  runtime.cpp
sdk/src/main/cpp/core/binary/: CMakeLists.txt
sdk/src/main/cpp/core/binary/include/: binary_io.hpp
sdk/src/main/cpp/core/binary/src/: binary_io.cpp
sdk/src/main/cpp/core/eventloop/: CMakeLists.txt
sdk/src/main/cpp/core/eventloop/include/: event_loop.hpp
sdk/src/main/cpp/core/eventloop/src/: event_loop.cpp
sdk/src/main/cpp/core/module/: CMakeLists.txt
sdk/src/main/cpp/core/network/: CMakeLists.txt
sdk/src/main/cpp/core/network/interface/: CMakeLists.txt
sdk/src/main/cpp/core/network/interface/include/: network_interface.hpp
sdk/src/main/cpp/core/network/interface/src/: network_interface.cpp
sdk/src/main/cpp/core/network/socket/: CMakeLists.txt
sdk/src/main/cpp/core/network/socket/include/: endpoint.hpp  socket.hpp  tcp_socket.hpp  udp_socket.hpp
sdk/src/main/cpp/core/network/socket/src/: ipv4or6_endpoint.cpp  socket_internal.cpp  socket_internal.hpp  tcp_socket.cpp  udp_socket.cpp
sdk/src/main/cpp/core/pattern/: CMakeLists.txt
sdk/src/main/cpp/core/pattern/include/: singleton.hpp
sdk/src/main/cpp/core/poll/: CMakeLists.txt
sdk/src/main/cpp/core/poll/include/: poll.hpp  poll_event.hpp  poller.hpp
sdk/src/main/cpp/core/poll/include/impl/: poller.hpp
sdk/src/main/cpp/core/poll/src/: epoll_poller_impl.cpp  poll_poller_impl.cpp  poller.cpp  poller_impl.hpp
sdk/src/main/cpp/core/runtime/: CMakeLists.txt
sdk/src/main/cpp/core/runtime/src/: sdk.cpp
sdk/src/main/cpp/core/socket/: CMakeLists.txt
sdk/src/main/cpp/core/socket/include/: ipv4_endpoint.hpp  socket.hpp  tcp_socket.hpp  udp_socket.hpp
sdk/src/main/cpp/core/socket/include/impl/: ipv4_endpoint.hpp  udp_socket.hpp
sdk/src/main/cpp/core/socket/src/: ipv4_endpoint.cpp  socket.cpp  socket_internal.cpp  socket_internal.hpp  tcp_socket.cpp  udp_socket.cpp
sdk/src/main/cpp/core/thread/: CMakeLists.txt
sdk/src/main/cpp/core/thread/include/: thread.hpp
sdk/src/main/cpp/core/thread/src/: thread.cpp
sdk/src/main/cpp/crypto/: CMakeLists.txt
sdk/src/main/cpp/crypto/aes/: CMakeLists.txt
sdk/src/main/cpp/crypto/ed25519/: CMakeLists.txt
sdk/src/main/cpp/crypto/fairplay/: CMakeLists.txt
sdk/src/main/cpp/crypto/fairplay/include/: fairplay.hpp
sdk/src/main/cpp/crypto/fairplay/src/: fairplay.cpp
sdk/src/main/cpp/flow/: CMakeLists.txt
sdk/src/main/cpp/include/aplay/: runtime.hpp  sdk.h
sdk/src/main/cpp/include/aplay/core/: runtime.hpp
sdk/src/main/cpp/jni/: CMakeLists.txt
sdk/src/main/cpp/napi/: CMakeLists.txt  napi_entry.cpp
sdk/src/main/cpp/osal/: CMakeLists.txt
sdk/src/main/cpp/osal/android/: CMakeLists.txt
sdk/src/main/cpp/osal/android/codec/: CMakeLists.txt
sdk/src/main/cpp/osal/android/codec/acodec/: CMakeLists.txt
sdk/src/main/cpp/osal/android/codec/vcodec/: CMakeLists.txt
sdk/src/main/cpp/osal/android/jni/: CMakeLists.txt  native_entry.cpp
sdk/src/main/cpp/osal/android/render/: CMakeLists.txt
sdk/src/main/cpp/osal/android/render/arender/: CMakeLists.txt
sdk/src/main/cpp/osal/harmony/: CMakeLists.txt
sdk/src/main/cpp/osal/harmony/codec/: CMakeLists.txt
sdk/src/main/cpp/osal/harmony/napi/: CMakeLists.txt  napi_entry.cpp
sdk/src/main/cpp/osal/harmony/render/: CMakeLists.txt
sdk/src/main/cpp/osal/linux/: CMakeLists.txt
sdk/src/main/cpp/osal/linux/codec/: CMakeLists.txt
sdk/src/main/cpp/osal/linux/native/: CMakeLists.txt  native.cpp
sdk/src/main/cpp/osal/linux/render/: CMakeLists.txt
sdk/src/main/cpp/protocol/: CMakeLists.txt
sdk/src/main/cpp/protocol/http/: CMakeLists.txt
sdk/src/main/cpp/protocol/http/include/: http.hpp
sdk/src/main/cpp/protocol/http/src/: http_parser.cpp  http_request.cpp  http_response.cpp  http_server.cpp  receiver_http.cpp
sdk/src/main/cpp/protocol/mdns/: CMakeLists.txt
sdk/src/main/cpp/protocol/mdns/harness/: mdns_harness_announce_main.cpp  mdns_harness_replay_main.cpp
sdk/src/main/cpp/protocol/mdns/include/: mdns.hpp  mdns_constants.hpp  mdns_parser.hpp  mdns_responder.hpp  mdns_service.hpp  packet_summary.hpp  question_summary.hpp  record_summary.hpp  responder_config.hpp  response_plan.hpp
sdk/src/main/cpp/protocol/mdns/src/: dns_service_discovery.cpp  mdns.cpp  mdns_harness.cpp  mdns_harness.hpp  mdns_internal.hpp  mdns_packet.cpp  mdns_packet.hpp  mdns_packet_writer.cpp  mdns_parser.cpp  mdns_responder.cpp  mdns_responder.hpp  mdns_responder_thread.cpp  mdns_responder_thread.hpp  mdns_service.cpp  mdns_service.hpp  mdns_types.hpp  txt_record.cpp
sdk/src/main/cpp/protocol/rtsp/: CMakeLists.txt
sdk/src/main/cpp/streaming/: CMakeLists.txt
sdk/src/main/cpp/streaming/airplay/: CMakeLists.txt
sdk/src/main/cpp/streaming/airplay/include/: airplay.hpp
sdk/src/main/cpp/streaming/airplay/src/: airplay.cpp
sdk/src/main/cpp/streaming/connection/: CMakeLists.txt
sdk/src/main/cpp/streaming/connection/include/: connection.hpp
sdk/src/main/cpp/streaming/connection/src/: connection.cpp
sdk/src/main/cpp/streaming/hls/: CMakeLists.txt
sdk/src/main/cpp/streaming/jitterbuffer/: CMakeLists.txt
sdk/src/main/cpp/streaming/raop/: CMakeLists.txt
sdk/src/main/cpp/streaming/raop/include/: raop.hpp
sdk/src/main/cpp/streaming/raop/src/: raop.cpp
sdk/src/main/cpp/utils/: CMakeLists.txt
sdk/src/main/cpp/utils/module/: CMakeLists.txt
sdk/src/main/cpp/utils/poll/: CMakeLists.txt
sdk/src/main/cpp/utils/socket/: CMakeLists.txt
sdk/src/main/cpp/utils/thread/: CMakeLists.txt
(+93 files in other folders)
