if(APLAY_BUILD_LINUX)
    set(APLAY_OSAL_PLATFORM_MODULES
        linux)
endif()

if(APLAY_BUILD_ANDROID)
    list(APPEND APLAY_OSAL_PLATFORM_MODULES
        android)
endif()

if(APLAY_BUILD_HARMONY)
    list(APPEND APLAY_OSAL_PLATFORM_MODULES
        harmony)
endif()

foreach(APLAY_OSAL_PLATFORM_MODULE IN LISTS APLAY_OSAL_PLATFORM_MODULES)
    add_subdirectory(${APLAY_OSAL_PLATFORM_MODULE})
endforeach()
